[package]
name = "bin_finder"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true   

[dependencies]
dinvoke = { path = "dinvoke" }
bindings = { path = "bindings" }
data = { path = "data" }
litcrypt = "0.3"
getopts = "0.2"

[build-dependencies]
static_vcruntime = "2.0"